split into subpages

--- a/wspolpraca.html
+++ b/wspolpraca.html
@@ -84,50 +84,30 @@ else document.images[2*x+1].src="blank.png";}
 
 <table cellspacing="0" cellpadding="0"><tr>
 <td><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="kropla17.png" border="0">&nbsp;</td>
-<td><div class="tytul">KONTAKT</div></td>
+<td><div class="tytul">WSPÓŁPRACA</div></td>
 </tr></table>
 
 <br><br><br>
 
+&nbsp;&nbsp;&nbsp;&nbsp;Świadczymy usługi projektowe dla firm, urzędów, szkół oraz osób prywatnych. Poszukujemy nowych zleceń, lecz dbamy też o naszych stałych klientów. Nasi główni kontrahenci:<br><br>
+
 <table class="kontakt">
 <tr>
-<td valign="top" align="right">pełna nazwa firmy:&nbsp;</td>
-<td><b>Maria Żyła Home Heat Usługi Projektowe</b></td>
+<td align="right" valign="middle">&nbsp;&nbsp;&nbsp;&nbsp;- <a href="http://www.pk.edu.pl/" target="_blank">Politechnika Krakowska</a>&nbsp;</td>
+<td><a href="http://www.pk.edu.pl/" target="_blank"><img src="pk.jpg" border="0" height="80"></a></td>
 </tr>
 <tr>
-<td valign="top" align="right">adres:&nbsp;</td>
-<td><b>ul. Ćwikłowa 20<br>30-377 Kraków</b></td>
+<td></td>
 </tr>
 <tr>
-<td valign="top" align="right">kom:&nbsp;</td>
-<td><b>+48 692 447 358</b></td>
+<td></td>
 </tr>
 <tr>
-<td valign="top" align="right">e-mail:&nbsp;</td>
-<td><b>mariazyla@homeheat.pl</b></td>
+<td align="right" valign="middle">&nbsp;&nbsp;&nbsp;&nbsp;- <a href="http://www.krzeszowice.pl/" target="_blank">Urząd Miasta i Gminy Krzeszowice</a>&nbsp;</td>
+<td><a href="http://www.krzeszowice.pl/" target="_blank"><img src="umigk.gif" border="0" height="80"></a></td>
 </tr>
-<tr>
-<td valign="top" align="right">NIP:&nbsp;</td>
-<td><b>679 216 33 46</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">REGON:&nbsp;</td>
-<td><b>12 00 932 60</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">godziny otwarcia:&nbsp;</td>
-<td><b>pon.-pt. 8:00-20:00<br>sob. 10:00-16:00</b></td>
-</tr>
-
-<tr>
-<td valign="top" align="right">mapka dojazdu:&nbsp;</td>
-<td>
-<img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="mapka.jpg" border="0">
-</td>
-</tr>
-
 </table>
-
+        
 
 </td>
 </tr>
