--- a/o_firmie.html
+++ b/o_firmie.html
@@ -84,49 +84,27 @@ else document.images[2*x+1].src="blank.png";}
 
 <table cellspacing="0" cellpadding="0"><tr>
 <td><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="kropla17.png" border="0">&nbsp;</td>
-<td><div class="tytul">KONTAKT</div></td>
+<td><div class="tytul">O FIRMIE</div></td>
 </tr></table>
 
 <br><br><br>
 
-<table class="kontakt">
-<tr>
-<td valign="top" align="right">pełna nazwa firmy:&nbsp;</td>
-<td><b>Maria Żyła Home Heat Usługi Projektowe</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">adres:&nbsp;</td>
-<td><b>ul. Ćwikłowa 20<br>30-377 Kraków</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">kom:&nbsp;</td>
-<td><b>+48 692 447 358</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">e-mail:&nbsp;</td>
-<td><b>mariazyla@homeheat.pl</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">NIP:&nbsp;</td>
-<td><b>679 216 33 46</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">REGON:&nbsp;</td>
-<td><b>12 00 932 60</b></td>
-</tr>
-<tr>
-<td valign="top" align="right">godziny otwarcia:&nbsp;</td>
-<td><b>pon.-pt. 8:00-20:00<br>sob. 10:00-16:00</b></td>
-</tr>
+&nbsp;&nbsp;&nbsp;&nbsp;W 2005 roku powstała firma USŁUGI PROJEKTOWE INSTALACJE SANITARNE MARIA ŻYŁA. Cztery lata później otrzymała nową, obecną nazwę - <b>HOME HEAT USŁUGI PROJEKTOWE</b>. Przedsiębiorstwo oferuje usługi w zakresie projektowania:<br><br>
+&nbsp;- instalacji:<br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;- wodociągowo-kanalizacyjnych;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- centralnego ogrzewania i kotłowni;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- gazowych;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- wentylacji i klimatyzacji;<br><br>
+&nbsp;- przyłączy i sieci:<br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;- wodociągowo-kanalizacyjnych;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- gazowych;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- cieplnych.<br><br>
 
-<tr>
-<td valign="top" align="right">mapka dojazdu:&nbsp;</td>
-<td>
-<img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="mapka.jpg" border="0">
-</td>
-</tr>
-
-</table>
+&nbsp;&nbsp;&nbsp;&nbsp;Wykonujemy projekty dla budynków użyteczności publicznej, mieszkalnych, jedno-<br>
+i wielorodzinnych, przemysłowych i innych.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;Priorytetem firmy jest dokładność i profesjonalizm, dlatego projekty powstają na nowoczesnym sprzęcie komputerowym wyposażonym w oprogramowanie renomowanych producentów takich jak Autodesk, Sankom czy Microsoft.<br>
+<br>
+Zapraszamy do skorzystania z oferty. Telefon, adres e-mail oraz inne dane kontaktowe znajdą Państwo <a href="index.html">tutaj</a>.
 
 
 </td>
