--- a/o_firmie.html
+++ b/o_firmie.html
@@ -40,7 +40,7 @@ else document.images[2*x+1].src="blank.png";}
 
 <table cellspacing="0" cellpadding="0" valign="top">
 <tr>
-<td width="145" valign="top">
+<td width="156" valign="top">
 
 <img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" width="1" height="30">
 
@@ -48,7 +48,7 @@ else document.images[2*x+1].src="blank.png";}
 <td width="142" height="12" align="right">
 <a href="o_firmie.html" onMouseOver="f0(1,1)" onMouseOut="f0(1,0)" class="menu">O FIRMIE&nbsp;</a>
 </td>
-<td><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" border="0">&nbsp;</td>
+<td width="14"><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" border="0">&nbsp;</td>
 </tr></table>
 
 <img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" width="1" height="10">
@@ -57,7 +57,7 @@ else document.images[2*x+1].src="blank.png";}
 <td width="142" height="12" align="right">
 <a href="index.html" onMouseOver="f0(2,1)" onMouseOut="f0(2,0)" class="menu">KONTAKT&nbsp;</a>
 </td>
-<td><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" border="0">&nbsp;</td>
+<td width="14"><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" border="0">&nbsp;</td>
 </tr></table>
 
 <img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" width="1" height="10">
@@ -66,7 +66,7 @@ else document.images[2*x+1].src="blank.png";}
 <td width="142" height="12" align="right">
 <a href="wspolpraca.html" onMouseOver="f0(3,1)" onMouseOut="f0(3,0)" class="menu">WSPÓŁPRACA&nbsp;</a>
 </td>
-<td><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" border="0">&nbsp;</td>
+<td width="14"><img alt="MARIA ŻYŁA HOMEHEAT USŁUGI PROJEKTOWE KRAKÓW" src="blank.png" border="0">&nbsp;</td>
 </tr></table>
 
 </td>
